Web Inspector: ASSERT(!m_startedComposite) fails when recording on non-Cocoa Timeline https://bugs.webkit.org/show_bug.cgi?id=171363

Patch by Ross Kirsling <ross.kirsling@sony.com> on 2017-05-01
Reviewed by Matt Baker.

* page/FrameView.cpp:
(WebCore::FrameView::flushCompositingStateIncludingSubframes): Add PLATFORM(COCOA) guard.

Canonical link: https://commits.webkit.org/188430@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216043 268f45cc-cd09-0410-ab3c-d52691b4dbfc